--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-<div>Hello, World!</div>
+<div class="row">
+    <div>Select1</div>
+    <div>Select2</div>
+    <div class="grow">Long</div>
+    <div>Select3</div>
+</div>
 </body>
 </html>
