html-css-flex-layout-inner-main-auto-scroll-demo

--- a/index.html
+++ b/index.html
@@ -2,128 +2,131 @@
 <html>
 <head>
     <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" href="./inner.css">
 </head>
 <body>
 <div class="page">
     <div class="top">Top</div>
     <div class="body">
-        <ul>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-            <li>sdfdsflkhlkhisdohfsdfdslfk</li>
-        </ul>
+        <div class="main">
+            <ul>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+                <li>sdfdsflkhlkhisdohfsdfdslfk</li>
+            </ul>
+        </div>
+        <div class="footer">Footer</div>
     </div>
-    <div class="footer">Footer</div>
 </div>
 </body>
 </html>
